@@ -1,7 +1,9 @@
 
   Split out HTTP::Server::Simple::CGI::Environment to support non-CGI.pm CGIs
   Ignore SIGPIPE
-
+  
+  Signal handlers are now installed on ->run, not on new. Also, they're 
+  documented. Thanks to Mark Fowler.
 
 0.13 Tue Aug  9 21:25:20 EDT 2005
 
